welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrder:-6: error: Missing closing brace `}' assumed here
try {
^inOrder:1: error: expected class or object definition
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
^